@@ -1,4 +1,4 @@
-Copyright (c) 2003 - 2006, Arvid Norberg
+Copyright (c) 2003 - 2007, Arvid Norberg
 All rights reserved.
 
 Redistribution and use in source and binary forms, with or without
